Correção responsividade mobile e textos

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <img src="KAYRE_FELIXIMGS/FOTO_KAYRE_PAG.png" alt="Kayre Felix">
             </div>
 
-            <h1 class="hero-title">Kayre<br><span>Felix.</span></h1>
+            <h1 class="hero-title">Kayre<br><span>Felix</span></h1>
 
             <div class="social-icons">
                 <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
